--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,10 @@
     "react-native-camera": "^4.2.1",
     "react-native-immersive": "^2.0.0",
     "react-native-modal": "^13.0.1",
-
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.13.0",
+    "react-native-view-shot": "^3.7.0",
     "react-redux": "^8.1.2",
     "styled-components": "^6.0.7"
   },
