Feat: .gitignore에 *.pt추가
Former-commit-id: bf10c95a05aa5dc380c53064dfb7ac304737af7c

--- a/.gitignore
+++ b/.gitignore
@@ -763,4 +763,6 @@ google-services.json
 ### Gradle Patch ###
 # Java heap dump
 
+*.pt
+fastapi/dataset
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,intellij+all,intellij,java,node,react,reactnative,gradle,git,python
