Feat : .gitignore에 dataset추가
Former-commit-id: 55ed3232da9649324b6e8ff29adf6e81d43734f2

--- a/.gitignore
+++ b/.gitignore
@@ -764,4 +764,5 @@ google-services.json
 # Java heap dump
 
 *.pt
+fastapi/dataset
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,intellij+all,intellij,java,node,react,reactnative,gradle,git,python
