Feat : quickdraw 생성
Former-commit-id: ab0285ef25c65c9397677b96c13755b5d1614289

--- a/.gitignore
+++ b/.gitignore
@@ -765,4 +765,5 @@ google-services.json
 
 *.pt
 fastapi/dataset
+fastapi/draw/quickdraw
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,intellij+all,intellij,java,node,react,reactnative,gradle,git,python
