--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.0",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
+    "hangul-js": "^0.2.6",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-camera": "^4.2.1",
