--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "expo": "~49.0.10",
+    "expo-camera": "^13.6.0",
     "expo-status-bar": "~1.6.0",
     "hangul-js": "^0.2.6",
     "react": "18.2.0",
@@ -25,6 +26,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
     "react-native-view-shot": "^3.7.0",
+    "react-native-vision-camera": "^2.16.1",
     "react-redux": "^8.1.2",
     "styled-components": "^6.0.7"
   },
