--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "axios": "^1.5.0",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
@@ -19,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-camera": "^4.2.1",
+    "react-native-canvas": "^0.1.39",
     "react-native-immersive": "^2.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.6.3",
