--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-camera": "^4.2.1",
+    "react-native-easy-dnd": "^1.0.2",
     "react-native-immersive": "^2.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.6.3",
@@ -26,7 +27,8 @@
     "react-native-svg": "^13.13.0",
     "react-native-view-shot": "^3.7.0",
     "react-redux": "^8.1.2",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
