--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-camera": "^4.2.1",
+    "react-native-easy-dnd": "^1.0.2",
     "react-native-immersive": "^2.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.6.3",
