Feat: 도커 포트 포워딩
Former-commit-id: 83eaf52ed11befd580efe5350c72fee6b597e36a

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,16 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    ports:
+      - "9999:9999"
     networks:
       - backend
   fastapi:
     build:
       context: ./fastapi
       dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
     networks:
       - backend
 networks:
