--- a/.gitignore
+++ b/.gitignore
@@ -766,4 +766,8 @@ google-services.json
 *.pt
 fastapi/dataset
 fastapi/draw/quickdraw
+fastapi/**/runs
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,intellij+all,intellij,java,node,react,reactnative,gradle,git,python
+database/mysql-init/init.sql
+
+
