--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,44 @@
 version: '3.8'
 
 services:
-  nginx:
-    image: nginx:latest
-    ports:
-      - "8081:80"
+  database:
+    image: mysql:latest
+    container_name: database
+    environment:
+      MYSQL_ROOT_PASSWORD: ${PASSWORD}
+      MYSQL_DATABASE: ${DATABASE}
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - springboot
-      - fastapi
+      - ./database/mysql-init/init.sql:/docker-entrypoint-initdb.d/init.sql
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+      - --skip-character-set-client-handshake
     networks:
       - backend
+    ports:
+      - "3306:3306"
   springboot:
+    restart: "always"
+    container_name: springboot
     build:
       context: ./backend
       dockerfile: Dockerfile
     ports:
       - "9999:9999"
+    depends_on:
+      - database
     networks:
       - backend
   fastapi:
+    restart: "always"
+    container_name: fastapi
     build:
       context: ./fastapi
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
+    depends_on:
+      - database
     networks:
       - backend
 networks:
