Feat: 도커 설정 - 도커에 데이터베이스 설치 - 도커 실행 시 실행되는 sql작성 - .env를 사용해서 도커 암호관리
Former-commit-id: 6050625b8a476f718c24a7d5d770d9a4e9210374

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,13 @@ version: '3.8'
 
 services:
   database:
+    restart: "always"
     image: mysql:latest
     container_name: database
     environment:
-      MYSQL_ROOT_PASSWORD: ${PASSWORD}
+      MYSQL_ALLOW_EMPTY_PASSWORD: true
+      MYSQL_PASSWORD: ${PASSWORD}
+      MYSQL_USER: ${USER}
       MYSQL_DATABASE: ${DATABASE}
     volumes:
       - ./database/mysql-init/init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -13,6 +16,7 @@ services:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
       - --skip-character-set-client-handshake
+      - --default-authentication-plugin=mysql_native_password
     networks:
       - backend
     ports:
