Feat: 도커 설정 - 도커에 데이터베이스 설치 - 도커 실행 시 실행되는 sql작성 - .env를 사용해서 도커 암호관리
Former-commit-id: 4ca49af95fae931a6dd0018ed724448b5a48f847

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: mysql:latest
     container_name: database
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: true
+      MYSQL_ROOT_PASSWORD: ${PASSWORD}
       MYSQL_PASSWORD: ${PASSWORD}
       MYSQL_USER: ${USER}
       MYSQL_DATABASE: ${DATABASE}
