--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "expo": "~49.0.10",
+    "expo-av": "~13.4.1",
     "expo-camera": "~13.4.4",
     "expo-pixi": "^2.1.1",
     "expo-status-bar": "~1.6.0",
@@ -26,6 +27,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "13.9.0",
     "react-native-view-shot": "^3.7.0",
     "react-native-vision-camera": "^2.16.1",
