--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "expo": "~49.0.10",
+    "expo-asset": "~8.10.1",
     "expo-av": "~13.4.1",
     "expo-camera": "~13.4.4",
     "expo-pixi": "^2.1.1",
