--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,10 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,17 +12,18 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
+    "eas-cli": "^5.3.0",
     "expo": "~49.0.10",
     "expo-asset": "~8.10.1",
     "expo-av": "~13.4.1",
     "expo-camera": "~13.4.4",
     "expo-pixi": "^2.1.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "hangul-js": "^0.2.6",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-camera": "^4.2.1",
+    "react-native": "0.72.5",
     "react-native-easy-dnd": "^1.0.2",
     "react-native-immersive": "^2.0.0",
     "react-native-modal": "^13.0.1",
@@ -32,7 +32,6 @@
     "react-native-sound": "^0.11.2",
     "react-native-svg": "13.9.0",
     "react-native-view-shot": "^3.7.0",
-    "react-native-vision-camera": "^2.16.1",
     "react-redux": "^8.1.2",
     "styled-components": "^6.0.7"
   },
