--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -13,3 +13,8 @@ sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.8.0
 uvicorn==0.23.2
+
+ultralytics~=8.0.181
+boto3~=1.28.54
+python-dotenv~=1.0.0
+Pillow~=10.0.1
