--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -1,61 +1,8 @@
-annotated-types==0.5.0
-anyio==4.0.0
-asgiref==3.7.2
-boto3==1.28.55
-botocore==1.31.55
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.7
-contourpy==1.1.1
-cycler==0.11.0
-dill==0.3.7
-exceptiongroup==1.1.3
-fastapi==0.103.1
-filelock==3.12.4
-fonttools==4.42.1
-h11==0.14.0
-idna==3.4
-importlib-resources==6.1.0
-Jinja2==3.1.2
-jmespath==1.0.1
-kiwisolver==1.4.5
-MarkupSafe==2.1.3
-matplotlib==3.8.0
-mpmath==1.3.0
-mysql-connector-python==8.1.0
-networkx==3.1
-numpy==1.26.0
-opencv-python==4.8.0.76
-packaging==23.1
-pandas==2.1.1
-Pillow==10.0.1
-protobuf==4.21.12
-psutil==5.9.5
-py-cpuinfo==9.0.0
-pydantic==2.3.0
-pydantic_core==2.6.3
-PyMySQL==1.1.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-multipart==0.0.5
-pytz==2023.3.post1
-PyYAML==6.0.1
-requests==2.31.0
-s3transfer==0.7.0
-scipy==1.11.2
-seaborn==0.13.0rc0
-six==1.16.0
-sniffio==1.3.0
-SQLAlchemy==2.0.21
-starlette==0.27.0
-sympy==1.12
-torch==2.0.1
-torchvision==0.15.2
-tqdm==4.66.1
-typing_extensions==4.8.0
-tzdata==2023.3
-ultralytics==8.0.188
-urllib3==2.0.5
-uvicorn==0.15.0
-zipp==3.17.0
+ultralytics~=8.0.188
+SQLAlchemy~=2.0.21
+boto3~=1.28.55
+python-dotenv~=1.0.0
+fastapi~=0.103.1
+pydantic~=2.3.0
+starlette~=0.27.0
+Pillow~=10.0.1
