Feat : requirements.txt 최신화
Former-commit-id: 696ba3e133836707cf26bece924312f3482c5829

--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -6,6 +6,9 @@ WORKDIR /app
 # 필요한 라이브러리 설치
 RUN apt-get update -y && apt-get install -y libgl1-mesa-glx
 
+RUN python3 -m venv /app/venv
+ENV PATH="/app/venv/bin:$PATH"
+
 # requirements.txt 복사 후 패키지 설치
 COPY requirements.txt requirements.txt
 RUN pip install --upgrade pip
