--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -19,4 +19,4 @@ COPY . .
 
 # 컨테이너 실행 시 실행할 명령어 지정, 8000번 포트로 서버 실행
 EXPOSE 8000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app","--reload", "--host", "0.0.0.0", "--port", "8000"]
